[gd_scene load_steps=15 format=3 uid="uid://cqhrc53jyagwh"]

[ext_resource type="Script" uid="uid://ce8phyfqst713" path="res://Scenes/game_ui/game_ui.gd" id="1_rrrjh"]
[ext_resource type="LabelSettings" uid="uid://bto8qpqkie5ag" path="res://label_75.tres" id="2_8ltpb"]
[ext_resource type="Texture2D" uid="uid://dhcfq1juug1ru" path="res://Assets/Sprites/UI/textGetReady.png" id="3_qmmd8"]
[ext_resource type="Texture2D" uid="uid://c42nhwabeqalv" path="res://Assets/Sprites/UI/tapTick.png" id="4_2ucyi"]
[ext_resource type="Texture2D" uid="uid://i226rtrqfqpn" path="res://Assets/Sprites/UI/textGameOver.png" id="5_4lv41"]
[ext_resource type="Texture2D" uid="uid://bs0v2bu31y61k" path="res://Assets/Sprites/UI/UIbg.png" id="6_m20ho"]
[ext_resource type="LabelSettings" uid="uid://b12d182liyd2j" path="res://label_32_yellow.tres" id="7_0e6me"]
[ext_resource type="Texture2D" uid="uid://b2akkjgeahful" path="res://Assets/Sprites/UI/medalBronze.png" id="8_w5xer"]
[ext_resource type="Texture2D" uid="uid://duxaechd3165o" path="res://Assets/Sprites/UI/buttonLarge.png" id="9_7m54i"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://Assets/Fonts/font_score.ttf" id="10_sni0g"]

[sub_resource type="LabelSettings" id="LabelSettings_pu7o1"]
font = ExtResource("10_sni0g")
font_size = 60
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_pxypi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h0iyj"]
resource_name = "play"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.41, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvh2r"]
_data = {
&"RESET": SubResource("Animation_pxypi"),
&"play": SubResource("Animation_h0iyj")
}

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_rrrjh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("2_8ltpb")

[node name="StartMenu" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 73.0
grow_horizontal = 2
texture = ExtResource("3_qmmd8")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 61.0
offset_right = 29.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2ucyi")

[node name="GameOverMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("5_4lv41")

[node name="Panel" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("6_m20ho")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Medal"
label_settings = ExtResource("7_0e6me")
horizontal_alignment = 1

[node name="MedalImg" type="TextureRect" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_w5xer")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Score"
label_settings = ExtResource("7_0e6me")
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("2_8ltpb")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Best"
label_settings = ExtResource("7_0e6me")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = ExtResource("2_8ltpb")
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_7m54i")

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -30.5
offset_right = 34.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
text = "Ok"
label_settings = SubResource("LabelSettings_pu7o1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hvh2r")
}
autoplay = "play"

[connection signal="pressed" from="MarginContainer/GameOverMenu/PlayButton" to="." method="_on_play_button_pressed"]
